[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benfordslaw"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "benfordslaw is a python library to test the frequency distribution of leading digits."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
keywords = ["Python", "benfordslaw", "statistical analysis", "Fraud detection", "data validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ['matplotlib','numpy','scipy','pandas', 'datazets>=0.2.0']

[project.urls]
Homepage = "https://erdogant.github.io/benfordslaw"
Download = "https://github.com/erdogant/benfordslaw/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["benfordslaw"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "benfordslaw.__version__" }
